--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Homepage of Soumyajit Paul">
     <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="Gv6v9Ef9lLaj6hu2eG3lwF-heqDPnjax8vOVyLpYHSw" />
 </head>
 <body>
     <div class="navbar">
