--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     </h3> 
     <ul>
         <li>
-          <b>Simplifying imperfect recall games</b> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (full paper) [To appear]  
+          <b>Simplifying imperfect recall games</b> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) [To appear]  
         </li>
         <li>
          <b>Pushable chromatic number of graphs with degree constraints</b> - Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>]   
         </li>
         <li>
-          <b>A Bridge between Polynomial Optimization and Games with Imperfect Recall</b> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (full paper) [<a href="https://arxiv.org/pdf/2002.09941">Arxiv</a>][<a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>]  
+          <b>A Bridge between Polynomial Optimization and Games with Imperfect Recall</b> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (Full paper) [<a href="https://arxiv.org/pdf/2002.09941">Arxiv</a>][<a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>]  
         </li>
     </ul> 
     <h3>PhD thesis</h3>
