--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Soumyajit Paul, soumyajit161">
+    <meta name="author" content="Soumyajit Paul, soumyajit161, paulsse">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Soumyajit, Liverpool, game theory, games, automata, research, computer science">
+    <meta name="keywords" content="Soumyajit, Soumyajit Paul, paulsse, soumyajit161, B Srivathsan, Hugo Gimbert, U-Bordeaux, IRIF, Sven Schewe,  Liverpool, CMI, game theory, games, automata, research, computer science">
     <meta name="description" content="Homepage of Soumyajit Paul">
     <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,11 @@
           <h2>Soumyajit Paul</h2>
             <p>
             I am currently a post-doctoral researcher at the University of Liverpool with <a href="https://www.csc.liv.ac.uk/~sven/">Sven Schewe</a>  and <a href="https://www.csc.liv.ac.uk/~dominik/">Dominik Wojtczak</a> .
-            Previously, I was a Teaching and Research Fellow (<a href="https://en.wikipedia.org/wiki/Attach%C3%A9_Temporaire_d%27Enseignement_et_de_Recherche">ATER</a>) at Université Paris Cité affiliated to <a href="https://www.irif.fr/">IRIF</a>. 
+            </p>
+            <p>
+            Previously, I was a Teaching and Research Fellow (<a href="https://en.wikipedia.org/wiki/Attach%C3%A9_Temporaire_d%27Enseignement_et_de_Recherche">ATER</a>) at Université Paris Cité affiliated to <a href="https://www.irif.fr/">IRIF</a>.
+            </p>
+            <p> 
             I completed my PhD from <a href="https://www.labri.fr/">LaBRI</a>, Université de Bordeaux under the supervision of <a href="https://www.labri.fr/perso/gimbert/">Hugo Gimbert</a>, <a href="https://www.cmi.ac.in/~sri/">B. Srivathsan</a> and <a href="https://www.labri.fr/perso/ly/">Olivier Ly</a>.
             </p>  
         </div>
