--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Soumyajit Paul, soumyajit161, paulsse">
+    <meta name="author" content="Soumyajit Paul">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Soumyajit, Soumyajit Paul, paulsse, soumyajit161, B Srivathsan, Hugo Gimbert, U-Bordeaux, IRIF, Sven Schewe,  Liverpool, CMI, game theory, games, automata, research, computer science">
+    <meta name="keywords" content="Soumyajit, Soumyajit Paul, paulsse, soumyajit161, B Srivathsan, Hugo Gimbert, U-Bordeaux, IRIF, Sven Schewe,  Liverpool, CMI, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
     <meta name="description" content="Homepage of Soumyajit Paul">
     <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
@@ -21,7 +21,7 @@
     <div id="home" class="container page active">
         <div class="flex-container">
         <div>
-          <h2>Soumyajit Paul</h2>
+          <h1>Soumyajit Paul</h1>
             <p>
             I am currently a post-doctoral researcher at the University of Liverpool with <a href="https://www.csc.liv.ac.uk/~sven/">Sven Schewe</a>  and <a href="https://www.csc.liv.ac.uk/~dominik/">Dominik Wojtczak</a> .
             </p>
