profile change updates

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Soumyajit Paul">
+    <meta name="author" content="Soumyajit Paul, soumpl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Soumyajit, Soumyajit Paul, paulsse, soumyajit161, B Srivathsan, Hugo Gimbert, U-Bordeaux, IRIF, Sven Schewe,  Liverpool, CMI, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
+    <meta name="keywords" content="Soumyajit, Soumyajit Paul, soumpl, soumyajit161, B Srivathsan, Hugo Gimbert, U-Bordeaux, IRIF, Sven Schewe,  Liverpool, CMI, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
     <meta name="description" content="Homepage of Soumyajit Paul">
     <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
@@ -133,7 +133,7 @@
      </p>   
     <div class="flex-container">
         <div>
-             <a href="https://www.github.com/paulsse">
+             <a href="https://www.github.com/soumpl">
         <img src="git.png" alt="github" width="30" height="30">
         </a>
         </div>
