--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Homepage of Soumyajit Paul">
     <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
     <meta name="google-site-verification" content="Gv6v9Ef9lLaj6hu2eG3lwF-heqDPnjax8vOVyLpYHSw" />
 </head>
 <body>
@@ -22,6 +23,7 @@
         <div class="flex-container">
         <div>
           <h1>Soumyajit Paul</h1>
+          <h2>সৌম্যজিৎ</h2>
             <p>
             I am currently a post-doctoral researcher at the University of Liverpool with <a href="https://www.csc.liv.ac.uk/~sven/">Sven Schewe</a>  and <a href="https://www.csc.liv.ac.uk/~dominik/">Dominik Wojtczak</a> .
             </p>
