--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="research" class="container page" style="display: none;">
         <p> 
-        Broadly I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a>. I have worked on the complexity of computing equilibrium in finite duration games with imperfect informations. I have also been working on theoretical models for <a href="https://en.wikipedia.org/wiki/Contract_bridge">Bridge</a> Bidding.
+        Broadly I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a>. In the past, I have worked on complexity of computing equilibrium in games with imperfect information. I have also been working on theoretical models for <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
         </p>
         
         <p>
