--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
+    <meta name="google-site-verification" content="goWHNEUmWzjpqrNRFfN3ZPRhOzpaO_Za7LNO_Q0P7Jw" />
 </head>
 <body>
     <div class="navbar">
