--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Soumyajit Paul | Homepage of Soumyajit Paul</title>
     <meta name="author" content="Soumyajit Paul, soumpl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Soumyajit, Soumyajit Paul, soumpl, soumyajit161, B Srivathsan, Hugo Gimbert, U-Bordeaux, IRIF, Sven Schewe,  Liverpool, CMI, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
+    <meta name="keywords" content="Soumyajit, Soumyajit Paul, soumpl, paulsse, soumyajit161, Liverpool, University of Liverpool, Sven Schewe, B Srivathsan, Hugo Gimbert, LaBRI, Bordeaux, University of Bordeaux, IRIF, CMI, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
     <meta name="description" content="Homepage of Soumyajit Paul">
-    <title>Soumyajit P</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
     <meta name="google-site-verification" content="goWHNEUmWzjpqrNRFfN3ZPRhOzpaO_Za7LNO_Q0P7Jw" />
+    <meta name="google-site-verification" content="Gv6v9Ef9lLaj6hu2eG3lwF-heqDPnjax8vOVyLpYHSw" />
 </head>
 <body>
     <div class="navbar">
