--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </h3> 
     <ul>
         <li>
-          <strong>Simplifying imperfect recall games</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) [To appear]  
+          <strong>Simplifying imperfect recall games</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) [To appear][<a href="https://arxiv.org/pdf/2502.13933">Arxiv</a>]  
         </li>
         <li>
          <strong>Pushable chromatic number of graphs with degree constraints</strong> - Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>]   
@@ -78,7 +78,7 @@
 
     <div id="teaching" class="container page" style="display: none;">
         <h3>
-        At University of Liverpool [In English]
+        At University of Liverpool <h4>(In English)</h4>
         </h3>
         <ul>
             <li>
@@ -88,7 +88,7 @@
 
         <br>
         <h3>
-        Courses previously taught at Université Paris Cité as ATER [In French]
+        At Université Paris Cité as ATER (In French)
     </h3>
     <h5>TD (Problem solving sessions), TP (Lab sessions), cours (Course)</h5>
     <ul>
@@ -120,7 +120,7 @@
     </ul>
     <br>
     <h3>
-       Courses previously taught at CMI as Teaching Assistant [In English] 
+       At CMI as Teaching Assistant (In English) 
  
     </h3>
     <ul>
