--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div id="teaching" class="container page" style="display: none;">
         <h3>
-        At University of Liverpool <h4>(In English)</h4>
+        At University of Liverpool (In English)
         </h3>
         <ul>
             <li>
