--- a/index.html
+++ b/index.html
@@ -149,7 +149,12 @@
         </div>
         <div>
              <a href="https://dblp.org/pid/254/2088.html">
-        <img src="dblp.png" alt="github" width="30" height="30">
+        <img src="dblp.png" alt="dblp" width="30" height="30">
+        </a>
+        </div>
+        <div>
+             <a href="https://scholar.google.com/citations?user=V30ah6wAAAAJ&hl=en">
+        <img src="gscholar.png" alt="google scholar" width="30" height="30">
         </a>
         </div>
     </div>
