--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
     </h3> 
     <ul>
         <li>
-          <strong>Simplifying imperfect recall games</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) [To appear][<a href="https://arxiv.org/pdf/2502.13933">Arxiv</a>]  
+          <strong>Simplifying imperfect recall games</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
         </li>
         <li>
-         <strong>Pushable chromatic number of graphs with degree constraints</strong> - Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>]   
+         <strong>Pushable chromatic number of graphs with degree constraints</strong> - Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 <br> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
         </li>
         <li>
-          <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (Full paper) [<a href="https://arxiv.org/pdf/2002.09941">Arxiv</a>][<a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>]  
+          <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (Full paper) <br>  
+          <a href="https://arxiv.org/pdf/2002.09941">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>   
         </li>
     </ul> 
     <h3>PhD thesis</h3>
@@ -134,15 +135,9 @@
          <a href="https://www.cmi.ac.in/~sri/Courses/GGRP2016/index.html"><strong>Games on Graphs</strong></a>  [Aug-Dec 2016]
         </li>
     </ul>
-    </div>
-    <div>
-            Email : soumyajit.paul@liverpool.ac.uk
-    </div>
-     <p>
-         
-     </p>   
+    </div>  
     <div class="flex-container">
-        <div>
+        <div >
              <a href="https://www.github.com/soumpl">
         <img src="git.png" alt="github" width="30" height="30">
         </a>
@@ -158,6 +153,10 @@
         </a>
         </div>
     </div>
+    <div>
+         <img src="email1.png" width="250" height="25">
+    </div>
+    <br>
     <script>
         function showPage(pageId, element) {
             const pages = document.querySelectorAll('.page');
