--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div id="home" class="container page active">
         
-        <div>
+        <div >
           <h1>Soumyajit Paul</h1>
           <h2>সৌম্যজিৎ</h2>
         </div>
@@ -36,7 +36,10 @@
             </p>
             <p> 
             I completed my PhD from <a href="https://www.labri.fr/">LaBRI</a>, Université de Bordeaux under the supervision of <a href="https://www.labri.fr/perso/gimbert/">Hugo Gimbert</a>, <a href="https://www.cmi.ac.in/~sri/">B. Srivathsan</a> and <a href="https://www.labri.fr/perso/ly/">Olivier Ly</a>.
-            </p>  
+            </p> 
+            <p>
+            Before that, I completed my B.Sc in Mathematics and Computer Science and M.Sc in Computer Science from <a href="https://www.cmi.ac.in/"> Chennai Mathematical Institute</a>.
+            </p> 
            </div>
             <div>
             <img src="dp.png" alt="Profile Picture" class="profile-pic">  
@@ -49,12 +52,12 @@
 
     <div id="research" class="container page" style="display: none;">
         <p> 
-        Broadly I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a>. In the past, I have worked on complexity of computing equilibrium in games with imperfect information. I have also been working on theoretical models for <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
+        Broadly, I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a> and <a href="https://en.wikipedia.org/wiki/Stochastic_game">stochastic systems</a>. In the past, I have worked on complexity of computing equilibrium in finite stochastic games with imperfect information. I have also been working on a theoretical model for <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
         </p>
         
         <p>
-        My other research interests include <a href="https://en.wikipedia.org/wiki/Formal_verification">formal methods and verification</a>, <a href="https://en.wikipedia.org/wiki/Stochastic_game">probabilistic systems</a>, combinatorics.
-        I also enjoy thinking about interesting problems with theoretical flavour that model real life situations. 
+        My other research interests include <a href="https://en.wikipedia.org/wiki/Formal_verification">formal methods and verification</a>, combinatorics. 
+        I also enjoy thinking about theoretical questions that have direct and interesting applications.
     </p> 
 
     <h3>
@@ -62,13 +65,16 @@
     </h3> 
     <ul>
         <li>
-          <strong>Simplifying imperfect recall games</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
+          <strong>Simplifying Imperfect Recall Games</strong> <br>
+            Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
         </li>
         <li>
-         <strong>Pushable chromatic number of graphs with degree constraints</strong> - Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 <br> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
+         <strong>Pushable chromatic number of graphs with degree constraints</strong> 
+         <br> Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 <br> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
         </li>
         <li>
-          <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> - Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (Full paper) <br>  
+          <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> <br>
+           Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (Full paper) <br>  
           <a href="https://arxiv.org/pdf/2002.09941">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>   
         </li>
     </ul> 
@@ -121,7 +127,7 @@
     </ul>
     <br>
     <h3>
-       At CMI as Teaching Assistant (In English) 
+       At Chennai Mathematical Institute as Teaching Assistant (In English) 
  
     </h3>
     <ul>
@@ -149,12 +155,12 @@
         </div>
         <div>
              <a href="https://scholar.google.com/citations?user=V30ah6wAAAAJ&hl=en">
-        <img src="gscholar.png" alt="google scholar" width="30" height="30">
+        <img src="gs.png" alt="google scholar" width="28" height="28">
         </a>
         </div>
     </div>
     <div>
-         <img src="email1.png" width="250" height="25">
+         <img src="em.png" width="250" height="25">
     </div>
     <br>
     <script>
