--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Soumyajit Paul | Homepage of Soumyajit Paul</title>
     <meta name="author" content="Soumyajit Paul, soumpl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Soumyajit, Soumyajit Paul, soumpl, paulsse, soumyajit161, Liverpool, University of Liverpool, Sven Schewe, B Srivathsan, Hugo Gimbert, LaBRI, Bordeaux, University of Bordeaux, IRIF, CMI, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
+    <meta name="keywords" content="Soumyajit, Soumyajit Paul, soumpl, paulsse, soumyajit161, Liverpool, University of Liverpool, Sven Schewe, B Srivathsan, Hugo Gimbert, LaBRI, Bordeaux, University of Bordeaux, IRIF, CMI, Chennai Mathematical Institute, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
     <meta name="description" content="Homepage of Soumyajit Paul">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
@@ -52,12 +52,11 @@
 
     <div id="research" class="container page" style="display: none;">
         <p> 
-        Broadly, I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a> and <a href="https://en.wikipedia.org/wiki/Stochastic_game">stochastic systems</a>. In the past, I have worked on complexity of computing equilibrium in finite stochastic games with imperfect information. I have also been working on a theoretical model for <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
+        Broadly, I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a> and <a href="https://en.wikipedia.org/wiki/Stochastic_game">stochastic systems</a>. In the past, I have worked on complexity of computing equilibrium in finite stochastic games with imperfect information. My other research interests include <a href="https://en.wikipedia.org/wiki/Formal_verification">formal methods and verification</a>, combinatorics.
         </p>
         
         <p>
-        My other research interests include <a href="https://en.wikipedia.org/wiki/Formal_verification">formal methods and verification</a>, combinatorics. 
-        I also enjoy thinking about theoretical questions that have direct and interesting applications.
+        I also enjoy thinking about theoretical questions that have direct and interesting applications. I have been working on a theoretical model for finding optimal strategies in <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
     </p> 
 
     <h3>
@@ -66,18 +65,21 @@
     <ul>
         <li>
           <strong>Simplifying Imperfect Recall Games</strong> <br>
-            Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
+            Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
         </li>
         <li>
          <strong>Pushable chromatic number of graphs with degree constraints</strong> 
-         <br> Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena - Discrete Mathematics, 2021 <br> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
+         <br> Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena <br> Discrete Mathematics, 2021 <br> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
         </li>
         <li>
           <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> <br>
-           Hugo Gimbert, Soumyajit Paul, B. Srivathsan - AAMAS 2020 (Full paper) <br>  
+           Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> AAMAS 2020 (Full paper) <br>  
           <a href="https://arxiv.org/pdf/2002.09941">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>   
         </li>
     </ul> 
+
+
+
     <h3>PhD thesis</h3>
     <h4> <a href="https://theses.hal.science/tel-04503266v1/document">On the algorithmic complexity of two player zero-sum games of finite duration with imperfect information</a>
     </h4>
@@ -160,7 +162,7 @@
         </div>
     </div>
     <div>
-         <img src="em.png" width="250" height="25">
+         <img src="emh.png" width="290" height="25">
     </div>
     <br>
     <script>
