--- a/index.html
+++ b/index.html
@@ -59,26 +59,39 @@
         I also enjoy thinking about theoretical questions that have direct and interesting applications. I have been working on a theoretical model for finding optimal strategies in <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
     </p> 
 
-    <h3>
         Publications
     </h3> 
     <ul>
+        <li> 
+            <strong> Accelerating Markov Chain Model Checking: Good-for-Games Meets Unambiguous Automata</strong>
+            <br>
+            Yong Li, Soumyajit Paul, Sven Schewe, Qiyi Tang <br>
+             CAV 2025 (To appear)  <br>
+            
+        </li>
+
         <li>
-          <strong>Simplifying Imperfect Recall Games</strong> <br>
-            Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
+            <strong>Simplifying Imperfect Recall Games</strong> <br>
+            Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> 
+            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
         </li>
         <li>
-         <strong>Pushable chromatic number of graphs with degree constraints</strong> 
-         <br> Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric Sopena <br> Discrete Mathematics, 2021 <br> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
+            <strong>Pushable chromatic number of graphs with degree constraints</strong> 
+            <br> Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric     Sopena <br> 
+            Discrete Mathematics 2021 <br> 
+            <a href="https://www.sciencedirect.com/science/article/ abs/pii/S0012365X2030337X">Journal version</a>  
         </li>
         <li>
-          <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> <br>
-           Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> AAMAS 2020 (Full paper) <br>  
-          <a href="https://arxiv.org/pdf/2002.09941">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>   
+            <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> <br>
+             Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br>
+             AAMAS 2020 (Full paper) <br>  
+             <a href="https://arxiv.org/pdf/2002.09941">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/   3398761.3398818">Conference version</a>   
         </li>
     </ul> 
 
-
+    <!--
+     
+    -->
 
     <h3>PhD thesis</h3>
     <h4> <a href="https://theses.hal.science/tel-04503266v1/document">On the algorithmic complexity of two player zero-sum games of finite duration with imperfect information</a>
