--- a/index.html
+++ b/index.html
@@ -58,7 +58,19 @@
         <p>
         I also enjoy thinking about theoretical questions that have direct and interesting applications. I have been working on a theoretical model for finding optimal strategies in <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
     </p> 
-
+    <h3>
+        Preprints
+    </h3> 
+    <ul>
+        <li>
+            <strong>Resolving Nondeterminism by Chance</strong>
+            <br>
+            Soumyajit Paul, David Purser, Sven Schewe, Qiyi Tang, Patrick Totzke, Di-De Yen
+            <br>
+            <a href="https://arxiv.org/pdf/2504.10234">Arxiv</a>
+        </li>
+    </ul>
+    <h3>
         Publications
     </h3> 
     <ul>
