--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Soumyajit, Soumyajit Paul, soumpl, paulsse, soumyajit161, Liverpool, University of Liverpool, Sven Schewe, B Srivathsan, Hugo Gimbert, LaBRI, Bordeaux, University of Bordeaux, IRIF, CMI, Chennai Mathematical Institute, game theory, games, imperfect information games, imperfect recall, automata, research, computer science">
     <meta name="description" content="Homepage of Soumyajit Paul">
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="/" />
     <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
     <meta name="google-site-verification" content="goWHNEUmWzjpqrNRFfN3ZPRhOzpaO_Za7LNO_Q0P7Jw" />
     <meta name="google-site-verification" content="Gv6v9Ef9lLaj6hu2eG3lwF-heqDPnjax8vOVyLpYHSw" />
@@ -29,7 +30,10 @@
         <div class="flex-container">
           <div>
             <p>
-            I am currently a post-doctoral researcher at the University of Liverpool with <a href="https://www.csc.liv.ac.uk/~sven/">Sven Schewe</a>  and <a href="https://www.csc.liv.ac.uk/~dominik/">Dominik Wojtczak</a> .
+            I am currently a post-doctoral researcher at the <a href="https://www.liverpool.ac.uk/computer-science/">Department of Computer Science</a>, University of Liverpool with <a href="https://www.csc.liv.ac.uk/~sven/">Sven Schewe</a>  and <a href="https://www.csc.liv.ac.uk/~dominik/">Dominik Wojtczak</a> .
+            </p>
+            <p>
+            My research is in algorithmic game theory and formal verification.
             </p>
             <p>
             Previously, I was a Teaching and Research Fellow (<a href="https://en.wikipedia.org/wiki/Attach%C3%A9_Temporaire_d%27Enseignement_et_de_Recherche">ATER</a>) at Université Paris Cité affiliated to <a href="https://www.irif.fr/">IRIF</a>.
@@ -52,7 +56,7 @@
 
     <div id="research" class="container page" style="display: none;">
         <p> 
-        Broadly, I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a> and <a href="https://en.wikipedia.org/wiki/Stochastic_game">stochastic systems</a>. In the past, I have worked on complexity of computing equilibrium in finite stochastic games with imperfect information. My other research interests include <a href="https://en.wikipedia.org/wiki/Formal_verification">formal methods and verification</a>, combinatorics.
+         The area of my research is theoretical computer science. Broadly, I am interested in <a href="https://en.wikipedia.org/wiki/Algorithmic_game_theory">algorithmic game theory</a>, <a href="https://en.wikipedia.org/wiki/Stochastic_game">stochastic systems</a> and <a href="https://en.wikipedia.org/wiki/Formal_verification">formal verification</a>. During my PhD, I have worked on complexity of equilibrium computations in finite stochastic games with imperfect information. 
         </p>
         
         <p>
