--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
         <p>
         I also enjoy thinking about theoretical questions that have direct and interesting applications. I have been working on a theoretical model for finding optimal strategies in <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
     </p> 
+    <!--
     <h3>
         Preprints
+    </h3> 
+    -->
+    <h3>
+        Publications
     </h3> 
     <ul>
         <li>
@@ -71,12 +76,10 @@
             <br>
             Soumyajit Paul, David Purser, Sven Schewe, Qiyi Tang, Patrick Totzke, Di-De Yen
             <br>
+            CONCUR 2025 (To appear) <br>
             <a href="https://arxiv.org/pdf/2504.10234">Arxiv</a>
         </li>
     </ul>
-    <h3>
-        Publications
-    </h3> 
     <ul>
         <li> 
             <strong> Accelerating Markov Chain Model Checking: Good-for-Games Meets Unambiguous Automata</strong>
@@ -89,7 +92,7 @@
         <li>
             <strong>Simplifying Imperfect Recall Games</strong> <br>
             Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> 
-            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> 
+            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> | <a href="https://plibin.github.io/aamas-25-proceedings/pdfs/p895.pdf">Conference version</a> 
         </li>
         <li>
             <strong>Pushable chromatic number of graphs with degree constraints</strong> 
