fixed aamas25 proceedings link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li>
             <strong>Simplifying Imperfect Recall Games</strong> <br>
             Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> 
-            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> | <a href="https://plibin.github.io/aamas-25-proceedings/pdfs/p895.pdf">Conference version</a> | <a href="Slides/aamas-2025.pdf">Slides</a>
+            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> | <a href="https://www.ifaamas.org/Proceedings/aamas2025/pdfs/p895.pdf">Conference version</a> | <a href="Slides/aamas-2025.pdf">Slides</a>
         </li>
         <li>
             <strong>Pushable chromatic number of graphs with degree constraints</strong> 
