added gandalf news and aamas conference version

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
     </h3> 
     <ul>
         <li>
+            <strong>Generalised Reachability Games Revisited</strong>
+            <br>
+            Sougata Bose, Daniel Hausmann, Soumyajit Paul, Sven Schewe, Tansholpan Zhanabekova
+            <br>
+            GandALF 2025 (To appear) <br>
+        </li>
+
+        <li> 
+
+        <li>
             <strong>Resolving Nondeterminism by Chance</strong>
             <br>
             Soumyajit Paul, David Purser, Sven Schewe, Qiyi Tang, Patrick Totzke, Di-De Yen
@@ -79,8 +89,7 @@
             CONCUR 2025 (To appear) <br>
             <a href="https://arxiv.org/pdf/2504.10234">Arxiv</a>
         </li>
-    </ul>
-    <ul>
+
         <li> 
             <strong> Accelerating Markov Chain Model Checking: Good-for-Games Meets Unambiguous Automata</strong>
             <br>
@@ -92,7 +101,7 @@
         <li>
             <strong>Simplifying Imperfect Recall Games</strong> <br>
             Hugo Gimbert, Soumyajit Paul, B. Srivathsan <br> 
-            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> | <a href="https://www.ifaamas.org/Proceedings/aamas2025/pdfs/p895.pdf">Conference version</a> | <a href="Slides/aamas-2025.pdf">Slides</a>
+            AAMAS 2025 (Full paper) <br> <a href="https://arxiv.org/pdf/2502.13933">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/3709347.3743608">Conference version</a> | <a href="Slides/aamas-2025.pdf">Slides</a>
         </li>
         <li>
             <strong>Pushable chromatic number of graphs with degree constraints</strong> 
@@ -106,7 +115,7 @@
              AAMAS 2020 (Full paper) <br>  
              <a href="https://arxiv.org/pdf/2002.09941">Arxiv</a> | <a href="https://dl.acm.org/doi/10.5555/3398761.3398818">Conference version</a>   
         </li>
-    </ul> 
+    </ul>
 
     <!--
      
