added new preprint

--- a/index.html
+++ b/index.html
@@ -62,11 +62,20 @@
         <p>
         I also enjoy thinking about theoretical questions that have direct and interesting applications. I have been working on a theoretical model for finding optimal strategies in <a href="https://theses.hal.science/tel-04503266v1/document#page=118">Bridge Bidding</a>.
     </p> 
-    <!--
     <h3>
         Preprints
     </h3> 
-    -->
+    <ul>
+        <li>
+            <strong>
+               On the Complexity of the Optimal Correlated Equilibria in Extensive-Form Games  
+            </strong>
+            <br>
+            Vincent Cheval, Florian Horn, Soumyajit Paul, Mahsa Shirmohammadi
+            <br>
+            <a href="https://arxiv.org/pdf/2507.11509">Arxiv</a> 
+        </li>
+    </ul>
     <h3>
         Publications
     </h3> 
@@ -107,7 +116,7 @@
             <strong>Pushable chromatic number of graphs with degree constraints</strong> 
             <br> Julien Bensmail, Sandip Das, Soumen Nandi, Soumyajit Paul, Théo Pierron, Sagnik Sen, Éric     Sopena <br> 
             Discrete Mathematics 2021 <br> 
-            <a href="https://www.sciencedirect.com/science/article/ abs/pii/S0012365X2030337X">Journal version</a>  
+            <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X2030337X">Journal version</a>  
         </li>
         <li>
             <strong>A Bridge between Polynomial Optimization and Games with Imperfect Recall</strong> <br>
