added CAV conference paper

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             <strong> Accelerating Markov Chain Model Checking: Good-for-Games Meets Unambiguous Automata</strong>
             <br>
             Yong Li, Soumyajit Paul, Sven Schewe, Qiyi Tang <br>
-             CAV 2025 (To appear)  <br>
+             CAV 2025 <br>
+             <a href="https://doi.org/10.1007/978-3-031-98679-6_13"> Conference version</a>
             
         </li>
 
