added CAV slides

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <br>
             Yong Li, Soumyajit Paul, Sven Schewe, Qiyi Tang <br>
              CAV 2025 <br>
-             <a href="https://doi.org/10.1007/978-3-031-98679-6_13"> Conference version</a>
+             <a href="https://doi.org/10.1007/978-3-031-98679-6_13"> Conference version</a> | <a href="Slides/cav-2025.pdf">Slides</a>
             
         </li>
 
